Added card wishlist icon, more side nav fixes

--- a/product_page.html
+++ b/product_page.html
@@ -135,11 +135,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -158,7 +161,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -166,11 +169,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -189,7 +195,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -197,11 +203,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -220,7 +229,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -228,11 +237,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -251,7 +263,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -259,11 +271,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -282,7 +297,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -290,11 +305,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -313,7 +331,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -321,11 +339,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -344,7 +365,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -352,11 +373,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -375,7 +399,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -383,11 +407,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -406,7 +433,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -414,11 +441,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -437,7 +467,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -445,11 +475,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -468,7 +501,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -476,11 +509,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -499,7 +535,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -507,11 +543,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -530,7 +569,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -538,11 +577,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -561,7 +603,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -569,11 +611,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -592,7 +637,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -600,11 +645,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -623,7 +671,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
@@ -631,11 +679,14 @@
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
         >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
+          <div class="card-product-image">
+            <img
+              src="https://picsum.photos/300/300"
+              class="card-image"
+              alt="card-image"
+            />
+            <i class="fa fa-heart-o card-heart"></i>
+          </div>
           <div class="card-product-content">
             <div class="card-product-name">Item name</div>
             <div class="card-product-desc gray-text">with Goodies</div>
@@ -654,38 +705,7 @@
             </button>
             <button class="btn btn-icon btn-transparent btn-wish">
               <i class="fa fa-plus"></i>
-              Add to Wish List
-            </button>
-          </div>
-        </div>
-        <div
-          class="card-basic card-ribbon card-ribbon-warning card-product border-2"
-          badge-text="Only 2 left"
-        >
-          <img
-            src="https://picsum.photos/300/300"
-            class="card-image"
-            alt="card-image"
-          />
-          <div class="card-product-content">
-            <div class="card-product-name">Item name</div>
-            <div class="card-product-desc gray-text">with Goodies</div>
-            <div class="card-price large-text">
-              $100
-              <span class="card-price-slashed gray-text">$150</span>
-              <span class="card-rating"
-                >4 <i class="fa fa-star star-green"></i
-              ></span>
-            </div>
-          </div>
-          <div class="card-product-icons">
-            <button class="btn btn-icon btn-transparent btn-buy">
-              <i class="fa fa-shopping-cart"></i>
-              Buy now
-            </button>
-            <button class="btn btn-icon btn-transparent btn-wish">
-              <i class="fa fa-plus"></i>
-              Add to Wish List
+              Add to Cart
             </button>
           </div>
         </div>
