--- a/login.html
+++ b/login.html
@@ -41,51 +41,66 @@
         </div>
 
         <div class="nav-item-right">
-            <button class="btn btn-transparent">
-                <i class="fa fa-sign-in medium-text violet-text"></i>
-                <a href="../login.html" class="btn btn-link">
+            <a href="../login.html" class="btn btn-link">
+                <button class="btn btn-transparent">
+                    <i class="fa fa-sign-in medium-text violet-text"></i>
                     <span class="medium-text">Log-<span class="violet-text">in</span></span>
-                </a>
-            </button>
-            <div class="nav-item nav-cart">
+                </button>
+            </a>
+
+            <a href="../cart.html" class="btn btn-link">
                 <button class="btn btn-transparent">
                     <i class="fa fa-shopping-cart medium-text violet-text"></i>
+                    <span class="medium-text">Cart</span>
                 </button>
-            </div>
+            </a>
+
+            <a href="../wishlist.html" class="btn btn-link">
+                <button class="btn btn-transparent">
+                    <i class="fa fa-heart medium-text violet-text"></i>
+                    <span class="medium-text">Wishlist</span>
+                </button>
+            </a>
         </div>
     </nav>
     <aside class="side-nav page-side-nav">
         <div class="input-with-status-icon nav-search-bar">
-          <input
-            type="text"
-            class="input border-2"
-            placeholder="Search to go to Product Listing Page"
-          />
-          <a href="./product_page.html">
-            <i class="fa fa-search input-status violet-text"></i>
-          </a>
+            <input type="text" class="input border-2" placeholder="Search to go to Product Listing Page" />
+            <a href="./product_page.html">
+                <i class="fa fa-search input-status violet-text"></i>
+            </a>
         </div>
         <button class="btn btn-transparent">
-          <i class="fa fa-sign-in medium-text violet-text"></i>
-          <a href="../login.html" class="btn btn-link">
-            <span class="medium-text"
-              >Log-<span class="violet-text">in</span></span
-            >
-          </a>
+            <i class="fa fa-sign-in medium-text violet-text"></i>
+            <a href="../login.html" class="btn btn-link">
+                <span class="medium-text">Log-<span class="violet-text">in</span></span>
+            </a>
         </button>
-          <button class="btn btn-transparent">
-            <i class="fa fa-shopping-cart medium-text violet-text"> </i>
-            <span class="medium-text"
-            >Go to <span class="violet-text">Cart</span></span
-          >
-          </button>
-          <button class="btn btn-transparent">
+        <button class="btn btn-transparent">
+            <i class="fa fa-heart medium-text violet-text"></i>
+            <a href="../wishlist.html" class="btn btn-link">
+                <span class="medium-text">Wishlist</span>
+            </a>
+        </button>
+        <button class="btn btn-transparent">
+            <a href="../cart.html" class="btn btn-link">
+                <i class="fa fa-shopping-cart medium-text violet-text"> </i>
+                <span class="medium-text">Go to <span class="violet-text">Cart</span></span>
+            </a>
+        </button>
+        <button class="btn btn-transparent">
             <i class="fa fa-home medium-text violet-text"></i>
             <a href="./index.html" class="btn btn-link">
-             <span class="medium-text">Home</span>
+                <span class="medium-text">Home</span>
             </a>
-          </button>
-      </aside>
+        </button>
+        <button class="btn btn-transparent">
+            <i class="fa fa-list medium-text violet-text"></i>
+            <a href="./product_page.html" class="btn btn-link">
+                <span class="medium-text">Product Page</span>
+            </a>
+        </button>
+    </aside>
     <main class="login-page">
         <div class="login-container">
             <div class="card-login">
@@ -139,7 +154,8 @@
                 <button class="btn btn-lg btn-primary btn-wide"><span class="medium-text">Sign up</span>
                 </button>
                 <a class="btn btn-md btn-transparent btn-wide  create-account" href="./login.html">
-                    <span class="normal-text violet-text">Already have an account<b><i class="fa fa-arrow-right"></i></b>
+                    <span class="normal-text violet-text">Already have an account<b><i
+                                class="fa fa-arrow-right"></i></b>
                 </a>
                 <div class="login-sso">
                     <span class="normal-text semibold-text violet-text">Or login using</span>
