CSS styles now fetched from url

--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="https://responsify-ui.vercel.app/styles.css"> -->
+    <link rel="stylesheet" href="https://responsify-ui.vercel.app/styles.css">
     <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./styles.css" />
     <title>Mock Ecomm App</title>
@@ -119,40 +119,11 @@
                     </div>
                     <div class="cart-quantity">
                         <button class="btn btn-lg btn-transparent cart-button">
-                            <span class="violet-text medium-text">-</span>
+                            <span class="violet-text normal-text">-</span>
                         </button>
-                        <span class="medium-text">1</span>
+                        <span class="normal-text">1</span>
                         <button class="btn btn-lg btn-transparent cart-button">
-                            <span class="violet-text medium-text">+</span>
-                        </button>
-                    </div>
-                </div>
-                <button class="btn btn-icon btn-transparent card-dismiss fa fa-close"></button>
-            </div>
-            <div class="card-cart border-2">
-                <div class="left">
-                    <div class="cart-product-image">
-                        <img src="https://picsum.photos/200/200" alt="" class="cart-image">
-                        <i class="fa fa-heart-o card-heart"></i>
-                    </div>
-                </div>
-                <div class="cart-product-content">
-                    <div class="cart-product-name">Item name</div>
-                    <div class="cart-product-desc gray-text">with Goodies</div>
-                    <div class="cart-price">
-                        <div class="cart-offer">
-                            <p class="info-text">Pay using UPI for 5% discount</p>
-                        </div>
-                        $100
-                        <span class="card-price-slashed gray-text">$150</span>
-                    </div>
-                    <div class="cart-quantity">
-                        <button class="btn btn-lg btn-transparent cart-button">
-                            <span class="violet-text large-text">-</span>
-                        </button>
-                        <span class="large-text">1</span>
-                        <button class="btn btn-lg btn-transparent cart-button">
-                            <span class="violet-text large-text">+</span>
+                            <span class="violet-text normal-text">+</span>
                         </button>
                     </div>
                 </div>
@@ -177,11 +148,11 @@
                     </div>
                     <div class="cart-quantity">
                         <button class="btn btn-lg btn-transparent cart-button">
-                            <span class="violet-text large-text">-</span>
+                            <span class="violet-text normal-text">-</span>
                         </button>
-                        <span class="large-text">1</span>
+                        <span class="normal-text">1</span>
                         <button class="btn btn-lg btn-transparent cart-button">
-                            <span class="violet-text large-text">+</span>
+                            <span class="violet-text normal-text">+</span>
                         </button>
                     </div>
                 </div>
@@ -206,11 +177,40 @@
                     </div>
                     <div class="cart-quantity">
                         <button class="btn btn-lg btn-transparent cart-button">
-                            <span class="violet-text large-text">-</span>
+                            <span class="violet-text normal-text">-</span>
                         </button>
-                        <span class="large-text">1</span>
+                        <span class="normal-text">1</span>
                         <button class="btn btn-lg btn-transparent cart-button">
-                            <span class="violet-text large-text">+</span>
+                            <span class="violet-text normal-text">+</span>
+                        </button>
+                    </div>
+                </div>
+                <button class="btn btn-icon btn-transparent card-dismiss fa fa-close"></button>
+            </div>
+            <div class="card-cart border-2">
+                <div class="left">
+                    <div class="cart-product-image">
+                        <img src="https://picsum.photos/200/200" alt="" class="cart-image">
+                        <i class="fa fa-heart-o card-heart"></i>
+                    </div>
+                </div>
+                <div class="cart-product-content">
+                    <div class="cart-product-name">Item name</div>
+                    <div class="cart-product-desc gray-text">with Goodies</div>
+                    <div class="cart-price">
+                        <div class="cart-offer">
+                            <p class="info-text">Pay using UPI for 5% discount</p>
+                        </div>
+                        $100
+                        <span class="card-price-slashed gray-text">$150</span>
+                    </div>
+                    <div class="cart-quantity">
+                        <button class="btn btn-lg btn-transparent cart-button">
+                            <span class="violet-text normal-text">-</span>
+                        </button>
+                        <span class="normal-text">1</span>
+                        <button class="btn btn-lg btn-transparent cart-button">
+                            <span class="violet-text normal-text">+</span>
                         </button>
                     </div>
                 </div>
