--- a/product_page.html
+++ b/product_page.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet" />
-  <!-- <link rel="stylesheet" href="https://responsify-ui.vercel.app/styles.css"> -->
+  <link rel="stylesheet" href="https://responsify-ui.vercel.app/styles.css">
   <link rel="stylesheet" href="./main.css" />
   <link rel="stylesheet" href="./styles.css" />
   <title>Mock Ecomm App</title>
